# budget

./: .pre-commit-config.yaml  example_tui_usage.py  pyproject.toml
src/budget/: __init__.py  categories.py  cli.py  exceptions.py
src/budget/cli/: __main__.py  labeling.py
src/budget/ml/active_learning/: exceptions.py  learner.py  models.py  strategies.py  tui.py
src/budget/transaction_loader/: __init__.py  banque_populaire.py  base.py  credit_lyonnais.py
tests/: test_dataset.py  test_transaction_loader.py
tests/data/transactions/: credit_lyonnais.csv
