[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "budget"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lightgbm>=4.6.0",
  "pandas>=2.3.2",
  "pendulum>=3.1.0",
  "pyarrow>=21.0.0",
  "scikit-learn>=1.7.2",
  "textual>=0.85.0",
  "typer>=0.19.1",
]

[project.scripts]
budget = "budget.cli.__main__:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/budget"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = ["ipython>=9.5.0", "pytest>=8.4.2"]

[tool.pyright]
venvPath = "."
venv = ".venv"
